--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,19 @@
 {
-    "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "sqltools.connections": [
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 8889,
+      "askForPassword": false,
+      "driver": "MySQL",
+      "name": "MySQL",
+      "database": "master_php",
+      "username": "sergi",
+      "connectionTimeout": 60
+    }
+  ]
 }
