--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,45 @@
       "database": "master_php",
       "username": "sergi",
       "connectionTimeout": 60
+    },
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "username": "sergi",
+      "database": "nota_master",
+      "name": "mysql",
+      "password": ""
+    },
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "mysql",
+      "database": "nota_master",
+      "username": "sergi",
+      "password": ""
+    },
+    {
+      "mysqlOptions": {
+        "authProtocol": "default"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "mysql",
+      "database": "nota_master_php",
+      "username": "sergi",
+      "password": ""
     }
   ]
 }
